--- a/narwhal/examples/Cargo.toml
+++ b/narwhal/examples/Cargo.toml
@@ -16,6 +16,7 @@ clap = "2.34"
 prost = "0.11.0"
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
 tonic = "0.8.2"
+node = { path = "../node", package = "narwhal-node" }
 workspace-hack.workspace = true
 
 [target.'cfg(not(target_env = "msvc"))'.build-dependencies]
